--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,9 @@
   "dependencies": {
     "express": "^4.21.1",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "jest": "^29.x.x", 
+    "supertest": "^6.x.x" 
   }
 }
